Added login, register and tos
Added login, register and TOS sites. Firebase is sat up.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <button class="headerbutton">About Us</button>
         <button class="headerbutton">FAQ</button>
         <button class="headerbutton">Terms Of Service</button>
+        <button class="headerbutton">Contact</button>
+
 
 
 
@@ -15,7 +17,10 @@
     <section class="title">
         <h1>Welcome to weebook</h1>
         <h2>An amazing image sharing platform</h2>
-        <button class="signup">Get Started</button>
 
+    </section>
+
+    <section class="startdiv">
+        <button class="signup2">Get Started</button>
     </section>
 </body>
