Made all sites and made buttons clickable
sites done, and all buttons do something.

Implemented firebase, but it dosent work rn.

--- a/TOS.html
+++ b/TOS.html
@@ -2,12 +2,11 @@
 
 <body>
     <header>
-        <button class="signup">Get Started</button>
-
-        <button class="headerbutton">About Us</button>
-        <button class="headerbutton">FAQ</button>
-        <button class="headerbutton">Terms Of Service</button>
-        <button class="headerbutton">Contact</button>
+        <form action="register.html"><button class="signup" >Get Started</button></form>
+        <form action="About.html"><button class="headerbutton">About Us</button></form>
+        <form action="FAQ.html"><button class="headerbutton">FAQ</button></form>
+        <form action="TOS.html"><button class="headerbutton">Terms Of Service</button></form>
+        <form action="contact.html"><button class="headerbutton">Contact</button></form>
     </header>
 
     <section class="title">
