--- a/FAQ.html
+++ b/FAQ.html
@@ -1,25 +1,12 @@
 <link rel="stylesheet" href="index.css">
 
 <body>
+    <meta charset="UTF-8">
     <header>
         <form action="register.html"><button class="signup" >Get Started</button></form>
         <form action="About.html"><button class="headerbutton">About Us</button></form>
         <form action="FAQ.html"><button class="headerbutton">FAQ</button></form>
         <form action="TOS.html"><button class="headerbutton">Terms Of Service</button></form>
         <form action="contact.html"><button class="headerbutton">Contact</button></form>
-
-
-
-
     </header>
-
-    <section class="title">
-        <h1>Welcome to weebook</h1>
-        <h2>An amazing image sharing platform</h2>
-
-    </section>
-
-    <section class="startdiv">
-        <button class="signup2">Get Started</button>
-    </section>
 </body>
