--- a/register.html
+++ b/register.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="index.css">
 <link rel="stylesheet" href="register.css">
 <link rel="stylesheet" href="input.css">
-
+<html>
 <body>
     <section class="center">
     <section class="main">
@@ -9,14 +9,14 @@
         <h3>Lets get you started!</h3>
         <h4>Please create an account.</h4>
         <section class="info">
-        <input type="text" class="loginInput" placeholder="Username">
-        <input type="text" class="loginInput" placeholder="Username">
+        <input type="text" class="loginInput" id="email" placeholder="Email">
+        <input type="text" class="loginInput" id="password" placeholder="Password">
 
 
     </section>
     <section class="signupbtndiv">
-        <h4>By pressing the Sign Up button, you accept the <a href="index.html"><u>Terms of Service</u></a>.</h4>
-    <button class="signupbtn">Sign Up</button>
+        <h4>By pressing the Sign Up button, you accept the <a href="TOS.html"><u>Terms of Service</u></a>.</h4>
+    <button class="signupbtn" id="signup">Sign Up</button>
     <h4>Already have a account?</h4>
     <b><button class="loginbutton">Login instead!</button></b>
 </section>
@@ -25,26 +25,6 @@
 </section>
 </body>
 
-<script type="module">
-    // Import the functions you need from the SDKs you need
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
-    import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-analytics.js";
-    // TODO: Add SDKs for Firebase products that you want to use
-    // https://firebase.google.com/docs/web/setup#available-libraries
-  
-    // Your web app's Firebase configuration
-    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-    const firebaseConfig = {
-      apiKey: "AIzaSyDuU0009XmoSpkn1ehmfLzqtKKNQ9NOsys",
-      authDomain: "login-system-259fd.firebaseapp.com",
-      projectId: "login-system-259fd",
-      storageBucket: "login-system-259fd.appspot.com",
-      messagingSenderId: "723301353539",
-      appId: "1:723301353539:web:41754ed85876c50d9a2cf6",
-      measurementId: "G-F09GE2SHLZ"
-    };
-  
-    // Initialize Firebase
-    const app = initializeApp(firebaseConfig);
-    const analytics = getAnalytics(app);
-  </script>
+<script type="module" src="main.js"></script>
+
+</html>
