--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
     </section>
 
     <section class="startdiv">
-        <button class="signup2">Get Started</button>
+        <form action="register.html"><button class="signup2">Get Started</button></form>
     </section>
 </body>
