--- a/login.html
+++ b/login.html
@@ -17,33 +17,9 @@
     <section class="signupbtndiv">
     <button class="signupbtn">Login</button>
     <h4>Dont have a account?</h4>
-    <b><button class="loginbutton">Create a account!</button>
+    <form action="register.html"><b><button class="loginbutton">Create a account!</button></form>
 </section></b>
     </section>
 
 </section>
 </body>
-
-<script type="module">
-    // Import the functions you need from the SDKs you need
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
-    import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-analytics.js";
-    // TODO: Add SDKs for Firebase products that you want to use
-    // https://firebase.google.com/docs/web/setup#available-libraries
-  
-    // Your web app's Firebase configuration
-    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-    const firebaseConfig = {
-      apiKey: "AIzaSyDuU0009XmoSpkn1ehmfLzqtKKNQ9NOsys",
-      authDomain: "login-system-259fd.firebaseapp.com",
-      projectId: "login-system-259fd",
-      storageBucket: "login-system-259fd.appspot.com",
-      messagingSenderId: "723301353539",
-      appId: "1:723301353539:web:41754ed85876c50d9a2cf6",
-      measurementId: "G-F09GE2SHLZ"
-    };
-  
-    // Initialize Firebase
-    const app = initializeApp(firebaseConfig);
-    const analytics = getAnalytics(app);
-  </script>
