Account is saved.
users account can now be saved on the webbrowser with cookies. Work has started on the actual main page.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 <link rel="stylesheet" href="index.css">
+<script>
+    if (document.cookie.includes('username')) {
+
+        window.location.replace('mainpage.html');
+    }
+</script>
+
+
 
 <body>
     <header>
@@ -23,3 +31,4 @@
         <form action="register.html"><button class="signup2">Get Started</button></form>
     </section>
 </body>
+
