--- a/register.html
+++ b/register.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <link rel="stylesheet" href="index.css">
 <link rel="stylesheet" href="register.css">
 <link rel="stylesheet" href="input.css">
