--- a/mainpage.html
+++ b/mainpage.html
@@ -18,9 +18,17 @@
 
       </form>
     </dialog>
+    <form action="post.html">
+    <button id="profilebtn" class="profile" ><img class="profileimg" src="images/post.png"></button>
+  </form>
+
   </header>
 
- <center><h1>Main page is going to be here.</h1></center>
+  <div class="feeddiv">
+    <ul>
+
+    </ul>
+  </div>
 
     <center><h4 id="name"></h4></center>
     <button class="signup" id="signout">Log Out</button>
