--- a/mainpage.html
+++ b/mainpage.html
@@ -33,7 +33,7 @@
        <h4 id="UID" hidden="true">UID</h4>
         <text class="usertext" id="user" tabindex="2"></text>
         <h6 id="title">Title</h6>
-        <h2 id="desc">description</h2>
+        <h2 id="desc" style="white-space: normal; text-overflow: ellipsis;">description</h2>
        <img src="" class="img" width="70%" height="50%" id="image">
       </center>
       </div>
