--- a/Profile.html
+++ b/Profile.html
@@ -18,6 +18,7 @@
 <section class="profilebtndiv">
     <input type="file" id="fileInput" class="upload-input" accept="image/*"/>
     <label tabindex="1" for="fileInput" class="upload-button">   Change  </label>
+
 </section>
 
 <section class="username" tabindex="3">
@@ -58,6 +59,7 @@
   }
 }
 
+  var file;
 
     const firebaseConfig = {
     apiKey: "AIzaSyDuU0009XmoSpkn1ehmfLzqtKKNQ9NOsys",
@@ -89,7 +91,7 @@ const database = firebase.database();
     const response = await fetch('https://api.imgur.com/3/image', {
       method: 'POST',
       headers: {
-        Authorization: "Client-ID 7918f28944dd9b6"
+        Authorization: "Client-ID 2ee10fe8b9a012a"
       },
       body: formData
     });
@@ -108,7 +110,7 @@ async function uploadImage(image) {
 
   const formData = new FormData();
   formData.append("image", image);
-
+  var RATE_LIMIT_DELAY_MS = 3000;
   var result = "";
 
   var requestOpt = {
@@ -118,8 +120,14 @@ async function uploadImage(image) {
     redirect: "follow"
   };
 
-  fetch("https://api.imgur.com/3/image", requestOpt)
-  .then(response => response.text)
+  const res = await fetch("https://api.imgur.com/3/image", requestOpt)
+
+  if (res.status === 429) {
+      await new Promise(resolve => setTimeout(resolve, RATE_LIMIT_DELAY_MS));
+      return uploadImage(image);
+  }
+  
+  then(response => response.text)
   .then(result = console.log(result))
   .catch(error => console.log("error", error));
 
@@ -161,7 +169,7 @@ async function uploadImage(image) {
 
       fileupload.addEventListener("change", function() {
         
-    var file = fileupload.files[0];
+    file = fileupload.files[0];
         console.log("change");
 
     if (file.size > 20000000) {
@@ -169,9 +177,8 @@ async function uploadImage(image) {
       file = null;
       return;
     }
-    uploadpic(file);
 
-    
+    uploadpic(file);
 
     const fileread = new FileReader();
     fileread.readAsDataURL(file);
