--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<title>Threadverse</title>
 <link rel="stylesheet" href="index.css">
 <script>
     if (document.cookie.includes('username')) {
@@ -12,16 +13,10 @@
     <div class="container">
     <header>
         <form action="register.html"><button class="signup" >Get Started</button></form>
-        <form action="About.html"><button class="headerbutton">About Us</button></form>
-        <form action="FAQ.html"><button class="headerbutton">FAQ</button></form>
-        <form action="TOS.html"><button class="headerbutton">Terms Of Service</button></form>
-        <form action="contact.html"><button class="headerbutton">Contact</button></form>
-
-
     </header>
 
     <section class="title">
-        <h1>Welcome to weebook</h1>
+        <h1>Welcome to Threadverse</h1>
         <h2>An amazing image sharing platform</h2>
 
     </section>
