--- a/post.html
+++ b/post.html
@@ -1,3 +1,4 @@
+<title>Threadverse</title>
 <!DOCTYPE html>
 <link rel="stylesheet" href="index.css">
 <link rel="stylesheet" href="post.css">
@@ -5,10 +6,13 @@
 
 
 <head> 
+  <table id="Table_01" width="1001" height="1100" border="0" cellpadding="0" cellspacing="0"> 
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <meta name="referrer" content="no-referrer">
 
 <body>
+  <table id="Table_01" width="1001" height="1100" border="0" cellpadding="0" cellspacing="0"> 
     <form action="mainpage.html">
 <button class="headerbutton">Back</button>
 </form>
