--- a/login.html
+++ b/login.html
@@ -1,12 +1,14 @@
+<title>Threadverse</title>
 <!DOCTYPE html>
 <link rel="stylesheet" href="index.css">
 <link rel="stylesheet" href="register.css">
 <link rel="stylesheet" href="input.css">
 <script type="module" src="main.js"></script>
 <body>
+  <table id="Table_01" width="1001" height="1100" border="0" cellpadding="0" cellspacing="0"> 
     <section class="center">
     <section class="main">
-        <h2>WeeBook</h2>
+        <h2>Threadverse</h2>
         <h3>Login</h3>
         <h4>Please log into your account.</h4>
         <section class="info">
