--- a/register.html
+++ b/register.html
@@ -1,3 +1,4 @@
+<title>Threadverse</title>
 <!DOCTYPE html>
 <link rel="stylesheet" href="index.css">
 <link rel="stylesheet" href="register.css">
@@ -5,10 +6,11 @@
 <script type="module" src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js"></script>
 <script type="module" src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js"></script>
 <html>
+  <table id="Table_01" width="1001" height="1100" border="0" cellpadding="0" cellspacing="0"> 
 <body>
     <section class="center">
     <section class="main">
-        <h2>WeeBook</h2>
+        <h2>Threadverse</h2>
         <h3>Lets get you started!</h3>
         <h4>Please create an account.</h4>
         <section class="info">
