--- a/view-post.html
+++ b/view-post.html
@@ -1,3 +1,4 @@
+<title>Threadverse</title>
 <link rel="stylesheet" href="index.css">
 <link rel="stylesheet" href="mainpage.css">
 <link rel="stylesheet" href="view-post.css">
@@ -5,6 +6,8 @@
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
 <body>
+  <table id="Table_01" width="1001" height="1100" border="0" cellpadding="0" cellspacing="0"> 
+  <div id="hidediv" hidden="true">
     <form action="mainpage.html">
     <button class="backbutton">Back</button>
 </form>
@@ -16,13 +19,13 @@
         <h5 style="margin-left: -83%; margin-top: 2%; padding: 0;" id="date">date</h5>
         <h5 style="top:6%; left: 72%; transform: translate(-50%, -50%); padding: 0; position: absolute;" id="user">User</h5>
           <h1 id="name" style="padding: 10px;">Post name</h1>
-        <h5 style="margin-top: -60px;" id="desc">description</h5>
-        <img src="" width="90%" height="61%" id="img">
+        <h5 style="margin-top: -60px; overflow-wrap: break-word;" id="desc">description</h5>
+        <img src="images/transparent.png" width="90%" height="61%" id="img">
         <h5 style="margin-left: 80%; margin-top: 2%; width: 20%; padding: 0; color: rgb(167, 167, 167);" id="UID">UID</h5>
       </div>
       </center>   
 
-      
+    </div>
 </body>
 
 <script>
@@ -76,9 +79,12 @@ const name = document.getElementById("name");
         date.textContent = itemData.timestamp;
         user.textContent = itemData.user;
         id.textContent = "UID: " + uid;
+
         if (itemData.img != "") {
             img.src = itemData.image;
         }
+        var hidediv = document.getElementById("hidediv");
+      hidediv.hidden = false;
     });
 
 
